--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav img{
     font-family: jost;
     width: 60%;
     font-weight: 100;
-    font-size: 24px;
+    font-size: 1.4vw;
 }
 .page1-paragraph button{
     background-color: white;
@@ -325,7 +325,7 @@ nav img{
 
 #page10{
     width: 100%;
-    height: 100vh;
+    min-height: 60vh;
     background-color: #093dcd;
     display: flex;
     justify-content: end;
@@ -352,10 +352,10 @@ nav img{
 
 #page11{
     width: 100%;
-    height: 150vh;
+    min-height: 100vh;
     position: relative;
     background-color: white;
-    padding: 10% 8%;
+    padding: 8%;
 }
 #page11 h1{
     font-family: jost;
@@ -408,6 +408,7 @@ nav img{
     border: 1px solid var(--second-primary-color);
     color: var(--second-primary-color);
 }
+
 #page12{
     width: 100%;
     height: 60vh;
